# rabbithole

./: .gitignore  README.md  rabbithole.sln  validacione.txt  vs-chromium-project.txt
rabbithole/: CMakeLists.txt  GenerateProjects.bat  imgui.ini  rabbithole.vcxproj  rabbithole.vcxproj.filters
rabbithole/res/meshes/: separateObjects.gltf
rabbithole/res/meshes/box/: box.mtl
rabbithole/res/meshes/cottage/: Cottage_FREE.mtl  Cottage_FREE.mtl.bak
rabbithole/res/meshes/terrain/: terrain.mtl
rabbithole/res/meshes/viking_room/: viking_room.mtl
rabbithole/res/shaders/: CS_3DNoiseLUT.glsl  CS_3DNoiseLUT.slang  CS_3DNoiseLUT.spv  CS_ComputeScattering.glsl  CS_ComputeScattering.slang  CS_ComputeScattering.spv  CS_Downsample.glsl  CS_Downsample.slang  CS_Downsample.spv  CS_Example.glsl  CS_Example.spv  CS_FSR.glsl  CS_FSR_EASU.spv  CS_FSR_RCAS.spv  CS_FilterSoftShadows.hlsl  CS_FilterSoftShadows.slang  CS_FilterSoftShadowsPass0.spv  CS_FilterSoftShadowsPass1.spv  CS_FilterSoftShadowsPass2.spv  CS_PrepareShadowMask.hlsl  CS_PrepareShadowMask.spv  CS_RayTracingShadows.glsl  CS_RayTracingShadows.slang  CS_RayTracingShadows.spv  CS_SSAO.glsl  CS_SSAO.slang  CS_SSAO.spv  CS_TAA.spv  CS_TAASharpener.hlsl  CS_TAASharpener.spv  CS_TileClassification.hlsl  CS_TileClassification.spv  CS_Upsample.glsl  CS_Upsample.slang  CS_Upsample.spv  CS_Volumetric.glsl  CS_Volumetric.slang  CS_Volumetric.spv  FS_ApplyBloom.glsl  FS_ApplyBloom.slang  (+67 more)
rabbithole/src/: common.h
rabbithole/src/Core/: Application.cpp  Application.h  main.cpp
rabbithole/src/ECS/: Component.h  Entity.h  EntityManager.cpp  EntityManager.h
rabbithole/src/Input/: InputAction.h  InputManager.cpp  InputManager.h
rabbithole/src/Logger/: Logger.cpp  Logger.h
rabbithole/src/Render/: BVH.cpp  BVH.h  Camera.cpp  Camera.h  Converters.cpp  Converters.h  GraphicPipeline.cpp  GraphicPipeline.h  ImGuiManager.cpp  ImGuiManager.h  ObjectLoader.h  PipelineManager.cpp  PipelineManager.h  RabbitPass.cpp  RabbitPass.h  RabbitPassManager.cpp  RabbitPassManager.h  Raytracing.cpp  Raytracing.h  RenderPass.cpp  RenderPass.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  Renderer.hpp  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourceStateTracking.cpp  ResourceStateTracking.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  SuperResolutionManager.cpp  SuperResolutionManager.h  Window.cpp  Window.h
rabbithole/src/Render/Model/: Core.h  Model.cpp  Model.h  ModelLoaderGLTF.cpp  ModelLoaderGLTF.h  ModelLoading.cpp  ModelLoading.h  TextureLoading.cpp  TextureLoading.h
rabbithole/src/Render/RabbitPasses/: AmbientOcclusion.cpp  AmbientOcclusion.h  GBuffer.cpp  GBuffer.h  Lighting.cpp  Lighting.h  Postprocessing.cpp  Postprocessing.h  Shadows.cpp  Shadows.h  Tools.cpp  Tools.h  Upscaling.cpp  Upscaling.h  Volumetric.cpp  Volumetric.h
rabbithole/src/Render/Vulkan/: Model.cpp  Model.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Vertex.cpp  Vertex.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGPUProfiler.cpp  VulkanGPUProfiler.h  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanStateManager.cpp  VulkanStateManager.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTypes.h  precomp.h  utils.cpp  utils.h
rabbithole/src/Render/Vulkan/Include/: VulkanWrapper.h
rabbithole/src/Render/Vulkan/spirv-reflect/: spirv_reflect.cpp
rabbithole/src/Utils/: utils.cpp  utils.h
